# agent-mail

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yaml
.kittify/: mission-brief.md
.kittify/charter/: charter.md  references.yaml
.kittify/charter/interview/: answers.yaml
docs/: agent-onboarding.md  agent-prompt.md  coding-standards.md  configuration.md  hosting.md  inbox-check-snippet.md  mcp-clients.md  messaging-rules.md
docs/decisions/: 0001-nats-jetstream-mailbox.md  0002-sqlite-backend.md  0005-one-api-every-client-is-a-client.md  0007-authentication-at-the-edge.md  0008-no-actor-has-authority.md  0009-litestar-and-msgspec.md
docs/missions/: 0001-elasticsearch-audit-log.md  0002-sqlite-backend.md  0003-wait-for-message.md  0004-presence-discovery.md  0005-human-web-ui.md  0006-prompt-catalog-and-host.md  0009-hub-feedback.md  0010-installability.md  0011-three-part-surfaces.md  0012-renames-and-simpler-routing.md  0013-friction-tidy-up.md  0014-fallback-cli.md  0015-public-notices.md  0016-gc-decapitates-threads.md  0017-channels-push.md  0018-spec-kitty-adoption.md  0019-reclone-under-correct-name.md  0020-thread-membership-leak.md  0021-api-first-console.md  0022-role-dropped-in-lookups.md  0023-assigned-names-and-profiles.md  0024-pen-pals-federation.md  0025-fediverse-profile.md  0026-policy-engine.md  0027-self-hosted-host.md  0028-retroactive-group-membership.md  README.md
kitty-specs/cli-primary-client-01KYA42E/: meta.json  plan.md  spec.md  status.events.jsonl
kitty-specs/cli-primary-client-01KYA42E/tasks/: README.md
kitty-specs/clients-01KYAFGP/: meta.json  spec.md  status.events.jsonl
kitty-specs/clients-01KYAFGP/tasks/: README.md
kitty-specs/gc-decapitates-threads-01KY9PRJ/: meta.json  plan.md  spec.md  status.events.jsonl
kitty-specs/gc-decapitates-threads-01KY9PRJ/decisions/: DM-01KY9PS6S2YG1HNNW8H81F64H1.md  index.json
kitty-specs/gc-decapitates-threads-01KY9PRJ/tasks/: README.md
kitty-specs/messaging-model-01KYA8K2/: meta.json  spec.md  status.events.jsonl
kitty-specs/messaging-model-01KYA8K2/tasks/: README.md
kitty-specs/the-api-01KYADKK/: meta.json  plan.md  status.events.jsonl
kitty-specs/the-api-01KYADKK/tasks/: README.md
src/agent_inbox/: api.py  cli.py  config.py  identity.py  mailbox.py  mcp_server.py  models.py  prompts.py  webui.py
src/agent_inbox/prompts/: admin.md  host.md  onboarding.md
src/agent_inbox/templates/: agents.html  prompts.html
src/agent_mail/: __init__.py  cli.py  config.py  defaults.toml  identity.py  mailbox.py  mcp_server.py  models.py
src/agent_mail/prompts/: host.md
src/agent_mailbox/: __init__.py  addressing.py  api.py  client.py  errors.py  exceptions.py  house.py  mailbox.py  mcp_client.py  name_pool.py  naming.py  policy.py  records.py  rules.py  serve.py  sqlite_store.py  store.py  vocabulary.py  wire.py
src/agent_mailbox_old/: __init__.py  api.py  cli.py  conf_file.py  config.py  config_env.py  defaults.toml  exceptions.py  identity.py  mailbox.py  mcp_server.py  models.py  prompts.py  webui.py
src/agent_mailbox_old/prompts/: agent.md  host.md
src/agent_mailbox_old/static/: README.md
src/agent_mailbox_old/templates/: base.html  compose.html  dashboard.html  doctor.html  flow.html  flow_edge.html  inbox.html  mailbox.html  message.html  status.html
tests/: test_addressing.py  test_api.py  test_cli.py  test_config.py  test_house.py  test_identity.py  test_integration.py  test_mailbox.py  test_naming.py  test_package.py  test_prompts.py  test_rules.py  test_sqlite_store.py  test_store_contract.py  test_webui.py
tests/legacy/: test_api.py  test_cli.py  test_conf_file.py  test_config.py  test_identity.py  test_integration.py  test_models.py  test_prompts.py  test_webui.py
tools/: cook_name_pool.py  spike_api_fit.py  spike_api_frameworks.py
