[project]
name = "agent-mailbox"
dynamic = ["version"]
description = "A SQLite mailbox for local LLM agents — one HTTP API, an ActivityStreams messaging model, and a local stdio MCP server so AI coding agents can message each other. No external services."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Sal Fadhley" },
]
keywords = [
    "agents",
    "llm",
    "mcp",
    "sqlite",
    "messaging",
    "inter-agent",
    "mailbox",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "aiosqlite>=0.20",
    "click>=8.1",
    "fastapi>=0.115",
    "httpx>=0.27",
    "mcp[cli]>=1.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# The human operator console served at /ui (server-rendered HTML). Base install and
# the MCP tools work without it; imported lazily only when the console is reached.
ui = [
    "jinja2>=3.1",
    "markdown>=3.6",
]

[project.urls]
Homepage = "https://github.com/salimfadhley/agent-inbox"
Repository = "https://github.com/salimfadhley/agent-inbox"
Issues = "https://github.com/salimfadhley/agent-inbox/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_mailbox"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "docs", "README.md", "LICENSE"]  # not agent-mailbox-old

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "pyright>=1.1.350",
    # the [ui] extra, so the console tests can render
    "jinja2>=3.1",
    "markdown>=3.6",
    "litestar>=2.24.0",
    "msgspec>=0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"
# The superseded implementation is kept for reference only and is deleted once the new
# system is green; linting code we are removing is waste (charter: Testing Standards).
exclude = [
    "agent-mailbox-old",
    # One-off build script, kept for provenance of the checked-in name pool. It is
    # never imported, never shipped, and depends on libraries we removed.
    "tools",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pyright]
include = ["src"]
exclude = ["agent-mailbox-old"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
